ci: run spec on main branch

--- a/.github/workflows/spec.yml
+++ b/.github/workflows/spec.yml
@@ -1,13 +1,13 @@
 ---
-name: Build
+name: Spec
 
 on:
   pull_request:
     branches:
-      - develop
+      - main
   push:
     branches:
-      - develop
+      - main
 
 jobs:
   build:
