--- a/.github/workflows/spec.yml
+++ b/.github/workflows/spec.yml
@@ -8,6 +8,9 @@ on:
   push:
     branches:
       - main
+  schedule:
+    -
+      cron: "45 3 * * *"
 
 jobs:
   build:
@@ -23,10 +26,6 @@ jobs:
       with:
         ruby-version: ${{ matrix.ruby }}
         bundler-cache: true
-    - name: Brew Automake
-      run: |
-        brew install automake
-      if: startsWith(matrix.os, 'macOS')
     - name: Install Dependencies
       run: |
         git submodule update --init
