--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ lib/bundler/man/
 
 # For a library or gem, you might want to ignore these files since the code is
 # intended to run in multiple environments; otherwise, check them in:
+Gemfile.lock
 .ruby-version
 .ruby-gemset
 
