--- a/.github/workflows/spec.yml
+++ b/.github/workflows/spec.yml
@@ -25,6 +25,11 @@ jobs:
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby }}
+        bundler-cache: true
+    - name: Brew Automake
+      run: |
+        brew install automake
+      if: startsWith(matrix.os, 'macOS')
     - name: Install Dependencies
       run: |
         git submodule update --init
