ci: add homebrew dependencies for pkg config and autogen

--- a/.github/workflows/spec.yml
+++ b/.github/workflows/spec.yml
@@ -26,9 +26,9 @@ jobs:
       with:
         ruby-version: ${{ matrix.ruby }}
         bundler-cache: true
-    - name: Brew Automake
+    - name: Homebrew maketools
       run: |
-        brew install automake
+        brew install --verbose pkg-config automake autogen
       if: startsWith(matrix.os, 'macOS')
     - name: Install Dependencies
       run: |
