--- a/.github/workflows/spec.yml
+++ b/.github/workflows/spec.yml
@@ -25,7 +25,7 @@ jobs:
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby }}
-        bundler-cache: true
+        bundler-cache: false
     - name: Homebrew maketools
       run: |
         brew install --verbose pkg-config automake autogen
