--- a/.github/workflows/spec.yml
+++ b/.github/workflows/spec.yml
@@ -13,7 +13,7 @@ on:
       cron: "45 3 * * *"
 
 jobs:
-  build:
+  test:
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -25,7 +25,11 @@ jobs:
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby }}
-        bundler-cache: true
+        bundler-cache: false
+    - name: Homebrew maketools
+      run: |
+        brew install --verbose pkg-config automake autogen
+      if: startsWith(matrix.os, 'macOS')
     - name: Install Dependencies
       run: |
         git submodule update --init
