--- a/.github/workflows/spec.yml
+++ b/.github/workflows/spec.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, macos-11.0]
         ruby: ['2.7', '3.0']
     steps:
     - uses: actions/checkout@v2
