--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,8 @@ Gemfile.lock
 
 # Unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+# NodeJS stuff
+node_modules
+package.json
+package-lock.json
