--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -25,6 +25,10 @@ jobs:
     steps:
       - name: "Checkout repository"
         uses: actions/checkout@v2
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '2.7'
+          bundler-cache: true
       - name: "Initialize CodeQL"
         uses: github/codeql-action/init@v1
         with:
@@ -33,3 +37,8 @@ jobs:
         uses: github/codeql-action/autobuild@v1
       - name: "Perform CodeQL Analysis"
         uses: github/codeql-action/analyze@v1
+      - name: "Run rufo code formatting checks"
+        run: |
+          gem install rufo
+          rufo --check ./lib
+          rufo --check ./spec
