--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,18 @@
-version: 2
+---
 updates:
-  - package-ecosystem: 'bundler'
-    directory: '/'
+  -
+    directory: /
+    labels:
+      - dependencies
+    package-ecosystem: bundler
     schedule:
-      interval: 'weekly'
+      interval: weekly
+    versioning-strategy: increase
+  -
+    directory: /
+    labels:
+      - operations
+    package-ecosystem: github-actions
+    schedule:
+      interval: monthly
+version: 2
