--- a/.github/workflows/spec.yml
+++ b/.github/workflows/spec.yml
@@ -18,8 +18,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest]
-        ruby: ['2.7', '3.1']
+        os: [ubuntu-22.04, macos-12]
+        ruby: ['3.0', '3.1']
     steps:
     - uses: actions/checkout@v3
     - uses: ruby/setup-ruby@v1
