--- a/.github/workflows/spec.yml
+++ b/.github/workflows/spec.yml
@@ -35,7 +35,7 @@ jobs:
       run: |
         sudo add-apt-repository -y ppa:ethereum/ethereum
         sudo apt-get update
-        sudo apt-get install ethereum solc
+        sudo apt-get install ethereum solc libyaml-dev
       if: startsWith(matrix.os, 'Ubuntu')
     - name: Run Geth
       run: |
