--- a/.github/workflows/spec.yml
+++ b/.github/workflows/spec.yml
@@ -19,7 +19,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-22.04, macos-12]
-        ruby: ['3.0', '3.1']
+        ruby: ['3.0', '3.1', '3.2']
     steps:
     - uses: actions/checkout@v3
     - uses: ruby/setup-ruby@v1
