--- a/.github/workflows/spec.yml
+++ b/.github/workflows/spec.yml
@@ -26,6 +26,17 @@ jobs:
       with:
         ruby-version: ${{ matrix.ruby }}
         bundler-cache: false
+    - name: MacOs Dependencies
+      run: |
+        brew tap ethereum/ethereum
+        brew install --verbose pkg-config automake autogen ethereum solidity
+      if: startsWith(matrix.os, 'macOS')
+    - name: Ubuntu Dependencies
+      run: |
+        sudo add-apt-repository -y ppa:ethereum/ethereum
+        sudo apt-get update
+        sudo apt-get install ethereum solc libyaml-dev
+      if: startsWith(matrix.os, 'Ubuntu')
     - name: Patch Geth # https://github.com/ethereum/go-ethereum/pull/27360
       run: |
         git clone https://github.com/q9f/go-ethereum.git -b q9f/params/shanghai
