--- a/.github/workflows/spec.yml
+++ b/.github/workflows/spec.yml
@@ -18,8 +18,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-22.04, macos-12]
-        ruby: ['3.0', '3.1', '3.2']
+        os: [ubuntu-latest, macos-latest]
+        ruby: ['3.0', '3.2', '3.3']
     steps:
     - uses: actions/checkout@v4
     - uses: ruby/setup-ruby@v1
