ci: fix codecov uploader

--- a/.github/workflows/spec.yml
+++ b/.github/workflows/spec.yml
@@ -53,5 +53,5 @@ jobs:
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v5
       with:
-        fail_ci_if_error: false
+        fail_ci_if_error: true
         token: ${{ secrets.CODECOV_TOKEN }}
