--- a/.github/workflows/spec.yml
+++ b/.github/workflows/spec.yml
@@ -19,7 +19,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        ruby: ['3.1', '3.2', '3.3']
+        ruby: ['3.2', '3.3']
     steps:
     - uses: actions/checkout@v4
     - uses: ruby/setup-ruby@v1
@@ -29,13 +29,13 @@ jobs:
     - name: MacOs Dependencies
       run: |
         brew tap ethereum/ethereum
-        brew install --verbose pkg-config automake autogen ethereum solidity
+        brew install --verbose pkg-config automake autogen geth solidity
       if: startsWith(matrix.os, 'macOS')
     - name: Ubuntu Dependencies
       run: |
         sudo add-apt-repository -y ppa:ethereum/ethereum
         sudo apt-get update
-        sudo apt-get install ethereum solc libyaml-dev
+        sudo apt-get install geth solc
       if: startsWith(matrix.os, 'Ubuntu')
     - name: Run Geth
       run: |
