--- a/.github/workflows/spec.yml
+++ b/.github/workflows/spec.yml
@@ -25,29 +25,46 @@ jobs:
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby }}
-        bundler-cache: false
+        bundler-cache: true
     - name: MacOs Dependencies
       run: |
         brew tap ethereum/ethereum
         brew install --verbose pkg-config automake autogen geth solidity
-      if: startsWith(matrix.os, 'macOS')
+      if: matrix.os == 'macos-latest'
     - name: Ubuntu Dependencies
       run: |
         sudo add-apt-repository -y ppa:ethereum/ethereum
         sudo apt-get update
         sudo apt-get install geth solc
-      if: startsWith(matrix.os, 'Ubuntu')
+      if: matrix.os == 'ubuntu-latest'
     - name: Run Geth
       run: |
-        geth --dev --http --ipcpath /tmp/geth.ipc &
-        disown &
+        geth --dev \
+             --http \
+             --ws \
+             --ipcpath /tmp/geth.ipc \
+             >/tmp/geth.log 2>&1 &
+        echo $! > /tmp/geth.pid
+        sleep 10
     - name: Gem Dependencies
       run: |
-        git submodule update --init
-        bundle install
+        git submodule update --init --recursive
     - name: Run Tests
       run: |
         bundle exec rspec
+    - name: Stop Geth
+      if: always()
+      run: |
+        if [ -f /tmp/geth.pid ]; then
+          kill "$(cat /tmp/geth.pid)" 2>/dev/null || true
+        fi
+    - name: Geth Logs (on failure)
+      if: failure()
+      run: |
+        if [ -f /tmp/geth.log ]; then
+          echo "===== geth log ====="
+          tail -n 200 /tmp/geth.log
+        fi
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v5
       with:
