--- a/.github/workflows/spec.yml
+++ b/.github/workflows/spec.yml
@@ -22,21 +22,22 @@ jobs:
         ruby: ['3.3', '3.4']
     steps:
     - uses: actions/checkout@v5
+    - name: MacOs Dependencies
+      if: matrix.os == 'macos-latest'
+      run: |
+        brew update
+        brew tap ethereum/ethereum
+        brew install --verbose autoconf automake libtool pkg-config autogen geth solidity
+    - name: Ubuntu Dependencies
+      if: matrix.os == 'ubuntu-latest'
+      run: |
+        sudo add-apt-repository -y ppa:ethereum/ethereum
+        sudo apt-get update
+        sudo apt-get install -y autoconf automake libtool pkg-config geth solc
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby }}
         bundler-cache: true
-    - name: MacOs Dependencies
-      run: |
-        brew tap ethereum/ethereum
-        brew install --verbose autoconf automake libtool pkg-config autogen geth solidity
-      if: matrix.os == 'macos-latest'
-    - name: Ubuntu Dependencies
-      run: |
-        sudo add-apt-repository -y ppa:ethereum/ethereum
-        sudo apt-get update
-        sudo apt-get install geth solc
-      if: matrix.os == 'ubuntu-latest'
     - name: Run Geth
       run: |
         geth --dev \
