--- a/.github/workflows/spec.yml
+++ b/.github/workflows/spec.yml
@@ -37,6 +37,7 @@ jobs:
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby }}
+        bundler: '2.7.2'
         bundler-cache: true
     - name: Run Geth
       run: |
